--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -1,6 +1,26 @@
+# src/main/resources/application.yml
 spring:
   profiles:
     active: dev
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+            redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
+            scope:
+              - email
+              - profile
+          github:
+            client-id: ${GITHUB_CLIENT_ID}
+            client-secret: ${GITHUB_CLIENT_SECRET}
+            redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
+            scope:
+              - user:email
+              - read:user
 
 server:
   servlet:
@@ -8,6 +28,11 @@ server:
 
   error:
     include-message: always
+
+jwt:
+  secret: ${JWT_SECRET:defaultSecretKeyForDevelopmentEnvironmentOnly}
+  accessTokenExpirationMs: 3600000  # 1 hour
+  refreshTokenExpirationMs: 604800000  # 7 days
 
 springdoc:
   api-docs:
