fix : 리프레시 토큰 http only

--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -3,6 +3,11 @@ spring:
   profiles:
     active: dev
 
+  web:
+    resources:
+      cache:
+        use-etag: false
+
   security:
     oauth2:
       client:
