--- a/blog/src/main/resources/application-prod.yml
+++ b/blog/src/main/resources/application-prod.yml
@@ -25,6 +25,10 @@ spring:
       max-file-size: 60MB
       max-request-size: 60MB
 
+  app:
+    oauth2:
+      redirect-uri: https://1000hyehyang.vercel.app/
+
 cloudflare:
   r2:
     access-key: ${R2_ACCESS_KEY}
