--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,6 +5,7 @@ spring:
     username: ${MYSQL_USER}
     password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+
   data:
     redis:
       host: ${REDIS_HOST}
@@ -24,6 +25,25 @@ spring:
     multipart:
       max-file-size: 60MB
       max-request-size: 60MB
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+            redirect-uri: https://blog-server-645l.onrender.com/api/oauth2/callback/google
+            scope:
+              - email
+              - profile
+          github:
+            client-id: ${GITHUB_CLIENT_ID}
+            client-secret: ${GITHUB_CLIENT_SECRET}
+            redirect-uri: https://blog-server-645l.onrender.com/api/oauth2/callback/github
+            scope:
+              - user:email
+              - read:user
 
   app:
     oauth2:
